--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "serve": "gulp"
+    "start": "gulp",
+    "build": "gulp build"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.10",
@@ -19,8 +20,10 @@
     "gulp-csso": "^4.0.1",
     "gulp-file-include": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
     "gulp-sass": "^5.1.0",
+    "node-sass-tilde-importer": "^1.0.2",
     "sass": "^1.60.0",
     "stylelint": "^15.4.0",
     "stylelint-config-standard-scss": "^7.0.1"
@@ -29,6 +32,7 @@
     "browser-sync": "^2.27.11",
     "del": "^7.0.0",
     "gulp": "^4.0.2",
+    "material-icons": "^1.13.4",
     "normalize.css": "^8.0.1",
     "sass": "^1.57.1"
   }
