--- a/package.json
+++ b/package.json
@@ -10,26 +10,29 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "browser-sync": "^2.27.11",
     "eslint": "^8.37.0",
     "eslint-config-google": "^0.14.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
     "gulp-file-include": "^2.3.0",
-    "gulp-htmlmin": "^5.0.1",
+    "gulp-html-minify": "^0.0.14",
     "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-sass": "^5.1.0",
-    "node-sass-tilde-importer": "^1.0.2",
     "sass": "^1.60.0",
     "stylelint": "^15.4.0",
     "stylelint-config-standard-scss": "^7.0.1"
   },
   "dependencies": {
-    "material-icons": "^1.13.4",
     "smooth-scrollbar": "^8.8.3"
   }
 }
